--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yaroslavmatushevych.github.io/todolistreact",
+  "homepage": "https://yaroslavmatushevych.github.io/ToDoListReact",
   "name": "todolistreact",
   "version": "0.1.0",
   "private": true,
